# Hajime-Web

./: .gitignore  README.md  package-lock.json  package.json
public/: index.html
server/: pyproject.toml
server/api/: api.py  jwt_functions.py
server/api/routes/: achievements.py  homepage.py  kanji.py  users.py
src/: App.js  index.css  style.css
src/components/: KanjiSetCard.js  MemberCard.js  ProtectedRoute.js
src/components/Kanji/: KanjiCard.js  KanjiSetCard.js  kanji.css
src/components/NavBar/: NavBar.js  NavBarElements.js
src/components/NewModal/: NewModal.js  NewModalElements.js
src/components/auth/: auth.js
src/components/popup/: Popup.css  Popup.js
src/static/: navbarRoutes.js  schema.js
src/views/: AboutView.js  HiraganaPracticeView.js  HomeView.js  KanjiPracticeView.js  KanjiSetView.js  KanjiView.js  KatakanaPracticeView.js  LoginView.js  NotFoundView.js  ProfileView.js  RegisterView.js  WelcomeView.js
